Added settings pane, new location tracker hook, much better speech transcription

--- a/app.json
+++ b/app.json
@@ -50,7 +50,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-audio"
+      "expo-audio",
+      "expo-notifications"
     ],
     "experiments": {
       "typedRoutes": true
