--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
     "expo-location": "~18.1.5",
+    "expo-notifications": "~0.31.3",
     "expo-router": "~5.1.0",
     "expo-speech-recognition": "^2.1.0",
     "expo-splash-screen": "~0.30.9",
