Hookup storage with drizzle and sqlite, fix settings, remove allCategories

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "drizzle-orm": "^0.44.2",
     "expo": "~53.0.12",
     "expo-audio": "~0.4.6",
     "expo-blur": "~14.1.5",
@@ -28,6 +29,7 @@
     "expo-router": "~5.1.0",
     "expo-speech-recognition": "^2.1.0",
     "expo-splash-screen": "~0.30.9",
+    "expo-sqlite": "~15.2.12",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
@@ -48,6 +50,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-kit": "^0.31.1",
     "eas-cli": "^16.12.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
