--- a/app.json
+++ b/app.json
@@ -54,7 +54,8 @@
         }
       ],
       "expo-audio",
-      "expo-notifications"
+      "expo-notifications",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
