--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-speech-recognition": "^2.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-sqlite": "~15.2.12",
+    "expo-sqlite-devtools": "^0.0.2",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
@@ -48,6 +49,7 @@
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
+    "@anthropic-ai/claude-code": "^1.0.31",
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "babel-plugin-inline-import": "^3.0.0",
