--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "build:ios": "eas build --platform ios --profile preview",
     "web": "expo start --web",
     "lint": "expo lint"
   },
