--- a/app.json
+++ b/app.json
@@ -11,11 +11,14 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.grabbit",
+      "developmentTeam": "QCUUU7QVF7",
+      "deploymentTarget": "15.1",
       "infoPlist": {
         "NSSpeechRecognitionUsageDescription": "Allow $(PRODUCT_NAME) to use speech recognition.",
         "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to use the microphone.",
         "ITSAppUsesNonExemptEncryption": false
-      }
+      },
+      "appleTeamId": "QCUUU7QVF7"
     },
     "android": {
       "adaptiveIcon": {
@@ -37,9 +40,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "assetBundlePatterns": [
-      "assets/data/*"
-    ],
+    "assetBundlePatterns": ["assets/data/*"],
     "plugins": [
       "expo-router",
       "expo-speech-recognition",
@@ -63,7 +64,8 @@
       ],
       "expo-audio",
       "expo-notifications",
-      "expo-sqlite"
+      "expo-sqlite",
+      ["expo-build-properties", { "ios": { "deploymentTarget": "15.1" } }]
     ],
     "experiments": {
       "typedRoutes": true
