New logos and splash screen, show locations in settings, new context

--- a/app.json
+++ b/app.json
@@ -56,8 +56,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "image": "./assets/images/grabbit_flash.jpg",
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
