Made the README sexy, moved the MAPBOX key to an env variable, fixed splash screen

--- a/app.json
+++ b/app.json
@@ -56,9 +56,9 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/grabbit_flash.jpg",
+          "image": "./assets/images/grabbit_splash.jpg",
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#6933F2"
         }
       ],
       "expo-audio",
