--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "build:ios": "pnpm dlx eas build --platform ios",
-    "develop:ios": "pnpm dlx eas build --local -p ios --profile development",
-    "preview:ios": "pnpm dlx eas build --local -p ios --profile preview",
+    "build:ios": "pnpm dlx eas-cli build --platform ios",
+    "develop:ios": "pnpm dlx eas-cli build --local -p ios --profile development",
+    "preview:ios": "pnpm dlx eas-cli build --local -p ios --profile preview",
     "clean:ios": "expo prebuild --clean --platform ios",
     "doctor": "pnpm dlx expo-doctor",
+    "eas": "pnpm dlx eas-cli",
+    "pull-env": "pnpm dlx eas-cli env:pull --environment development",
     "web": "expo start --web",
     "lint": "expo lint"
   },
