--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "prebuild:ios": "expo prebuild --platform ios",
     "build:ios": "pnpm dlx eas-cli build --platform ios",
     "develop:ios": "pnpm dlx eas-cli build --local -p ios --profile development",
     "preview:ios": "pnpm dlx eas-cli build --local -p ios --profile preview",
@@ -14,7 +15,8 @@
     "eas": "pnpm dlx eas-cli",
     "pull-env": "pnpm dlx eas-cli env:pull --environment development",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -59,14 +61,30 @@
   "devDependencies": {
     "@anthropic-ai/claude-code": "^1.0.31",
     "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.7",
     "typescript": "~5.8.3"
   },
   "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx,js,jsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/expo-env.d.ts",
+      "!**/.expo/**"
+    ]
+  },
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
