Added maestro, fixed cross-env

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "prebuild:ios": "expo prebuild --platform ios",
-    "build:ios": "pnpm dlx eas-cli build --platform ios",
-    "develop:ios": "pnpm dlx eas-cli build --local -p ios --profile development",
-    "preview:ios": "pnpm dlx eas-cli build --local -p ios --profile preview",
+    "build:ios": "cross-env pnpm dlx eas-cli build --platform ios",
+    "develop:ios": "cross-env pnpm dlx eas-cli build --local -p ios --profile development",
+    "preview:ios": "cross-env pnpm dlx eas-cli build --local -p ios --profile preview",
     "clean:ios": "expo prebuild --clean --platform ios",
     "doctor": "pnpm dlx expo-doctor",
-    "eas": "pnpm dlx eas-cli",
-    "pull-env": "pnpm dlx eas-cli env:pull --environment development",
+    "eas": "cross-env pnpm dlx eas-cli",
+    "pull-env": "cross-env pnpm dlx eas-cli env:pull --environment development",
     "web": "expo start --web",
     "lint": "expo lint",
     "test": "jest"
@@ -66,6 +66,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
     "babel-plugin-inline-import": "^3.0.0",
+    "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
