--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "prebuild:ios": "expo prebuild --platform ios",
-    "build:ios": "cross-env pnpm dlx eas-cli build --platform ios",
-    "develop:ios": "cross-env pnpm dlx eas-cli build --local -p ios --profile development",
-    "preview:ios": "cross-env pnpm dlx eas-cli build --local -p ios --profile preview",
+    "build:ios": "cross-env pnpm eas build --platform ios",
+    "develop:ios": "cross-env pnpm eas build --local -p ios --profile development",
+    "preview:ios": "cross-env pnpm eas build --local -p ios --profile preview",
     "clean:ios": "expo prebuild --clean --platform ios",
-    "doctor": "pnpm dlx expo-doctor",
-    "eas": "cross-env pnpm dlx eas-cli",
-    "pull-env": "cross-env pnpm dlx eas-cli env:pull --environment development",
+    "doctor": "cross-env pnpm eas --help &&pnpm dlx expo-doctor",
+    "eas": "cross-env EAS_TOKEN=$EAS_TOKEN pnpm dlx eas-cli",
+    "pull-env": "pnpm eas env:pull --environment development",
+    "whoami": "cross-env pnpm eas whoami",
     "web": "expo start --web",
     "lint": "expo lint",
     "test": "jest"
