Fix tests, cleanup commands

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "prebuild:ios": "expo prebuild --platform ios",
-    "build:ios": "cross-env pnpm eas build --platform ios",
-    "develop:ios": "cross-env pnpm eas build --local -p ios --profile development",
-    "preview:ios": "cross-env pnpm eas build --local -p ios --profile preview",
+    "build:ios": "pnpm eas build --platform ios",
+    "develop:ios": "pnpm eas build --local -p ios --profile development",
+    "preview:ios": "pnpm eas build -p ios --profile preview",
     "clean:ios": "expo prebuild --clean --platform ios",
-    "doctor": "cross-env pnpm eas --help &&pnpm dlx expo-doctor",
-    "eas": "cross-env EAS_TOKEN=$EAS_TOKEN pnpm dlx eas-cli",
-    "pull-env": "cross-env pnpm eas env:pull --environment development",
-    "whoami": "cross-env pnpm eas whoami",
+    "doctor": "pnpm eas --help &&pnpm dlx expo-doctor",
+    "eas": "cross-env pnpm dlx eas-cli",
+    "pull-env": "pnpm eas env:pull --environment development",
+    "whoami": "pnpm eas whoami",
     "web": "expo start --web",
     "lint": "expo lint",
     "test": "jest"
@@ -66,6 +66,7 @@
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-inline-import": "^3.0.0",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.1",
@@ -85,7 +86,7 @@
       "/node_modules/",
       "/__tests__/mocks.ts"
     ],
-    "collectCoverage": true,
+    "collectCoverage": false,
     "collectCoverageFrom": [
       "**/*.{ts,tsx,js,jsx}",
       "!**/coverage/**",
