Add react native onnx, add multi qa minilm

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-system-ui": "~5.0.9",
     "expo-task-manager": "~13.1.5",
     "expo-web-browser": "~14.2.0",
+    "onnxruntime-react-native": "^1.22.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
