--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "prebuild:android": "expo prebuild --platform android",
+    "build:android": "pnpm eas build --platform android",
+    "develop:android": "pnpm eas build --local -p android --profile development",
+    "preview:android": "pnpm eas build -p android --profile preview",
+    "clean:android": "expo prebuild --clean --platform android",
     "prebuild:ios": "expo prebuild --platform ios",
     "build:ios": "pnpm eas build --platform ios",
     "develop:ios": "pnpm eas build --local -p ios --profile development",
     "preview:ios": "pnpm eas build -p ios --profile preview",
     "clean:ios": "expo prebuild --clean --platform ios",
-    "doctor": "pnpm eas --help &&pnpm dlx expo-doctor",
+    "doctor": "pnpm dlx expo-doctor",
     "eas": "cross-env pnpm dlx eas-cli",
     "pull-env": "pnpm eas env:pull --environment development",
     "whoami": "pnpm eas whoami",
