--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@anthropic-ai/claude-code": "^1.0.31",
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-dynamic-import": "^7.27.1",
+    "@libsql/client": "^0.15.9",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
@@ -80,12 +81,14 @@
   "jest": {
     "preset": "jest-expo",
     "setupFilesAfterEnv": [
-      "<rootDir>/__tests__/mocks.ts"
+      "<rootDir>/__mocks__/setup.ts"
     ],
     "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/__tests__/mocks.ts"
+      "/node_modules/"
     ],
+    "moduleNameMapper": {
+      "\\.(onnx)$": "<rootDir>/__mocks__/fileMock.js"
+    },
     "collectCoverage": false,
     "collectCoverageFrom": [
       "**/*.{ts,tsx,js,jsx}",
