--- a/app.json
+++ b/app.json
@@ -38,7 +38,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "assetBundlePatterns": ["assets/data/*"],
+    "assetBundlePatterns": [
+      "assets/data/*"
+    ],
     "plugins": [
       "expo-router",
       "expo-speech-recognition",
@@ -63,7 +65,14 @@
       "expo-audio",
       "expo-notifications",
       "expo-sqlite",
-      ["expo-build-properties", { "ios": { "deploymentTarget": "15.1" } }]
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "deploymentTarget": "15.1"
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
